--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <title>Portfolio Project</title>
   </head>
   <body>
+    <header>
+        <nav class="navbar navbar-expand justify-content-center">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="#">Hello</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+          </nav>
+          
 
+    </header>
 
 
 
