--- a/index.html
+++ b/index.html
@@ -1,32 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair&display=swap">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Playfair&display=swap"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Portfolio Project</title>
   </head>
-  <body>
+  <body class="container-fluid" data-spy="scroll" data-target="#navbarNav">
     <header>
-        <nav class="navbar navbar-expand justify-content-center">
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#">Hello</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-            </ul>
-          </nav>
-          
-
+      <nav class="navbar navbar-expand justify-content-center p-3">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Hello</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+      </nav>
     </header>
+    <section class="intro-card row">
+      <div class="card col-sm-12">
+        <img
+          class="card-img-top"
+          src="Images SVG\image_geometry_2.svg"
+          alt="Card image"
+        />
+        <div class="card-body">
+          <h4 class="card-title">Juan & Luis</h4>
+          <p class="card-text">
+            Hello! I am a software developer! I can help you build a product,
+            feature or website. Take a look at my work. If you like what you see
+            and have a project you need coded, don’t hesitate to contact me.
+          </p>
+          <a href="#" class="btn btn-danger">See Profile</a>
+        </div>
+      </div>
+    </section>
+    <section class="projects">
+      <div class="card col-sm-12">
+        <div class="card-body">
+          <h2 class="card-title">
+            Projects<span class="badge bg-secondary">New</span>
+          </h2>
+          <p class="card-text">
+            Hello! I am a software developer! I can help you build a product,
+            feature or website. Take a look at my work. If you like what you see
+            and have a project you need coded, don’t hesitate to contact me.
+          </p>
+          <img
+            class="card-img-top"
+            src="Images SVG\image_geometry_2.svg"
+            alt="Card image"
+          />
+          <a href="#" class="btn btn-danger">See Profile</a>
+        </div>
+      </div>
+    </section>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
