--- a/index.html
+++ b/index.html
@@ -39,36 +39,72 @@
           alt="Card image"
         />
         <div class="card-body">
-          <h4 class="card-title">Juan & Luis</h4>
-          <p class="card-text">
+          <h4 class="card-title text-center">Juan & Luis</h4>
+          <p class="card-text text-center">
             Hello! I am a software developer! I can help you build a product,
             feature or website. Take a look at my work. If you like what you see
             and have a project you need coded, don’t hesitate to contact me.
           </p>
-          <a href="#" class="btn btn-danger">See Profile</a>
+          <a href="#" class="btn btn-danger text-center">See Profile</a>
         </div>
       </div>
     </section>
     <section class="projects">
       <div class="card col-sm-12">
         <div class="card-body">
-          <h2 class="card-title">
+          <h2 class="card-title text-center">
             Projects<span class="badge bg-secondary">New</span>
           </h2>
-          <p class="card-text">
-            Hello! I am a software developer! I can help you build a product,
-            feature or website. Take a look at my work. If you like what you see
-            and have a project you need coded, don’t hesitate to contact me.
+          <p class="card-text text-center">
+            This is the first project we developed!
           </p>
           <img
             class="card-img-top"
-            src="Images SVG\image_geometry_2.svg"
-            alt="Card image"
-          />
-          <a href="#" class="btn btn-danger">See Profile</a>
+            src="Images SVG\Projects1.svg"
+            alt="Card image">
+          <a href="#" class="btn btn-danger text-center">See Project</a>
         </div>
       </div>
     </section>
+    
+    <section class="contact">
+        <div class="card-body">
+            <h4 class="card-title text-center">Get Started</h4>
+            <p class="card-text text-center">
+                I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+            </p>
+      
+      <form>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Your name</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Your Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Write your comments</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text"></div>
+          </div>
+        <button type="submit" class="btn btn-primary">Start Collaboration</button>
+      </form>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row row-cols-auto">
+              <div class="col"><img src="Images SVG\ic_github.svg"></div>
+              <div class="col"><img src="Images SVG\ic_linkedin.svg"></div>
+              <div class="col"><img src="Images SVG\ic_medium.svg"></div>
+              <div class="col"><img src="Images SVG\ic_twitter.svg"></div>
+            </div>
+          </div>
+
+
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
