Add modals to projects section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,32 @@
             class="card-img-top"
             src="Images SVG\Projects1.svg"
             alt="Card image">
-          <a href="#" class="btn btn-danger text-center">See Project</a>
+          <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  See Project
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Languages</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        -HTML
+        -CSS
+        -Javascript
+        -Bootstrap
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Got it!</button>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
       </div>
     </section>
@@ -73,6 +98,7 @@
             <p class="card-text text-center">
                 I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
             </p>
+      
       
       <form>
         <div class="mb-3">
