Delete CSS file
Background color changed

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Playfair&display=swap"
     />
-    <link rel="stylesheet" href="styles.css" />
     <title>Portfolio Project</title>
   </head>
-  <body class="container-fluid" data-spy="scroll" data-target="#navbarNav">
+  <body class="container-fluid bg-primary" data-spy="scroll" data-target="#navbarNav">
     <header>
       <nav class="navbar navbar-expand justify-content-center p-3">
         <ul class="navbar-nav">
