--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Playfair&display=swap"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Portfolio Project</title>
   </head>
   <body class="container-fluid bg-primary" data-spy="scroll" data-target="#navbarNav">
